revert to hypernumbers

--- a/themes/sphinx-bootstrap/layout.html.8
+++ b/themes/sphinx-bootstrap/layout.html.8
@@ -5,10 +5,10 @@
 {%- if url_root == '#' %}{% set url_root = '' %}{% endif %}
 
 {%- macro relbar(bottom=False) %}
-          <a class="brand" href="http://vixo.com?from=http://api.vixo.com">Vixo</a>
-          <a class="brand" href="http://blog.vixo.com?from=http://api.vixo.com">Blog</a>
-          <a class="brand" href="http://documentation.vixo.com?from=http://api.vixo.com">Documentation</a>
-          <a class="brand" href="http://wordpress.vixo.com?from=http://api.vixo.com">WordPress Plugin</a>
+          <a class="brand" href="http://hypernumbers.org?from=http://api.hypernumbers.org">Hypernumbers</a>
+          <a class="brand" href="http://blog.hypernumbers.org?from=http://api.hypernumbers.org">Blog</a>
+          <a class="brand" href="http://documentation.hypernumbers.org?from=http://api.hypernumbers.org">Documentation</a>
+          <a class="brand" href="http://wordpress.hypernumbers.org?from=http://api.hypernumbers.org">WordPress Plugin</a>
 {%- endmacro %}
 
 {%- macro navigation() %}
@@ -191,8 +191,8 @@
 				<div id="main" class="span12 clearfix" role="main">
           <header>
 					  <div class="hero-unit">
-              <h1>Vixo API</h1>
-              <p>Vixo the only native web spreadsheet - with the only native web API - loved by developers for its power and simplicity</p>
+              <h1>Hypernumbers API</h1>
+              <p>Hypernumbers the only native web spreadsheet - with the only native web API - loved by developers for its power and simplicity</p>
             </div>
           </header>
 				</div>
@@ -222,9 +222,9 @@
                   <div class='alert'>
                     <i class='icon-chevron-right icon-3x pull-left' style='color:#dd4814;'></i>
                   <h4>Spreadsheet user?</h4>
-                  <p>learn how to use the Vixo Spreadsheet</p>
+                  <p>learn how to use the Hypernumbers Spreadsheet</p>
                   <p>
-                    <a class="btn btn-info" href="http://vixo.com">
+                    <a class="btn btn-info" href="http://hypernumbers.org">
                       Take me there.. »
                     </a>
                   </p>
@@ -232,9 +232,9 @@
                   <div class='alert'>
                     <i class='icon-chevron-right icon-3x pull-left' style='color:#dd4814;'></i>
                     <h4>WordPress user?</h4>
-                  <p>turbocharge your WordPress site with an embedded Vixo spreadsheet</p>
+                  <p>turbocharge your WordPress site with an embedded Hypernumbers spreadsheet</p>
                   <p>
-                    <a class="btn btn-info" href="http://vixo.com">
+                    <a class="btn btn-info" href="http://hypernumbers.org">
                       Show me how »
                     </a>
                   </p>
@@ -287,7 +287,7 @@
                 {% trans sphinx_version=sphinx_version|e %}Created using <a
                         href="http://sphinx.pocoo.org/">Sphinx</a> {{ sphinx_version }}
                     .{% endtrans %}
-        Get <a href="http://vixo.com?from=http://api.vixo.com">the next generation spreadsheet</a> now!
+        Get <a href="http://hypernumbers.org?from=http://api.hypernumbers.org">the next generation spreadsheet</a> now!
                 </small>
                 </p>
             {%- endif %}
@@ -321,8 +321,8 @@
     });
 </script>
 
-<!-- Vixo tracking cookies -->
-<script src="_static/vixo.commoncookie.js"></script>
+<!-- Hypernumbers tracking cookies -->
+<script src="_static/hypernumbers.orgmoncookie.js"></script>
 
 <!-- twitter -->
 <script src="http://platform.twitter.com/widgets.js" type="text/javascript"></script>
